--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-matplotlib 
-pyyaml 
-seaborn 
-numpy 
-scikit-learn 
-scikit-image
-tqdm
-bbox-visualizer 
-opencv-python 
+matplotlib==3.7.3
+pyyaml==6.0.1
+seaborn==0.13.0 
+numpy==1.24.4 
+scikit-learn==1.3.1 
+scikit-image==0.21.0
+tqdm==4.66.1
+bbox-visualizer==0.1.0 
+opencv-python==4.8.1.78 
 pycocotools>=2.0.2
